# minizinc_blackbox_examples

./: .gitignore  README.md  blackbox_testing.mzp
Alertsafe Roster Project/: Biocase=0Days=14_MinSum_solution.txt  Biocase=0Days=42_solution.txt  Biocase=0Days=7_MinWorstCase_solution.txt  Biocase=0Days=7_solution.txt  Biocase=11Days=42_solution.txt  Biocase=12Days=42_solution.txt  Biocase=15Days=42_solution.txt  Biocase=16Days=42_solution.txt  Biocase=6Days=42_solution.txt  EvaluateScore.mzn  Roster2FullSingle.eps  Roster2excerpt.eps  allavgplot.txt  maxObj=400Biocase=0Days=42_MinSum_solution.txt  maxObj=540Biocase=0Days=42_MinSum_solution.txt  maxObj=540Biocase=1Days=42_MinSum_solution.txt  maxObj=560Biocase=0Days=42_MinSum_solution.txt  maxObj=560Biocase=1Days=42_MinSum_solution.txt  maxObj=570Biocase=1Days=42_MinSum_solution.txt  maxObj=580Biocase=1Days=42_MinSum_solution.txt  maxObj=600Biocase=0Days=42_MinSum_solution.txt  model__STUB_initialSol.mzn  model__STUB_phase1.mzn  model__STUB_phase2.mzn  model__STUB_phase3.mzn  oldparamswithoutbio.m  pytest_checkvals.py  realrosters.mat  secondallavgplot.txt  test.mzn  thirdallavgplot.txt
NRPwF/: Biocase=0Days=42_MinSum_solution.txt  Biocase=0Days=7_MinSum_solution.txt  Biocase=10Days=42_solution.txt  Biocase=13Days=42_solution.txt  Biocase=14Days=42_solution.txt  Biocase=17Days=42_solution.txt  Biocase=18Days=42_solution.txt  (+78 more)
benchmarks/wind/models/blackbox_exec/cpp_ln_uniform_on_restart_dll/: CMakeLists.txt  README.md
benchmarks/wind/models/blackbox_exec/cpp_ln_uniform_on_restart_dll/src/: ln_uniform_on_restart.cpp
(+22178 files in other folders)
